# rust-embed-sandbox

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: run-emu.sh  test-emu.sh
src/: hw.rs  lib.rs  main.rs
tests/: cli_smoke.rs  hardware_contracts.rs  props.rs  snap_cli.rs
tests/snapshots/: snap_cli__help_text.snap  snap_cli__self_test_structure.snap  snap_cli__version_text.snap
