[package]
name = "my-rust-pi-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
serial_test = "3"

[profile.dev]
debug = true
